Fixed subtitle spacing

--- a/public/stylesheets/stylish-portfolio.css
+++ b/public/stylesheets/stylish-portfolio.css
@@ -55,6 +55,8 @@ h2, h4{
 #mainSubtitle {
     font-family: "Courier New", Courier, monospace;
     font-size:25px;
+    padding-top: 2%;
+    padding-bottom: 2%;
 }
 
 .box {
